--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "ink-mdx",
-	"version": "0.0.2",
+	"version": "0.0.3",
 	"description": "MDX component for Ink",
 	"license": "MIT",
 	"repository": "stelmakh/ink-mdx",
@@ -31,8 +31,7 @@
 	"dependencies": {
 		"@mdx-js/react": "^1.6.22",
 		"@mdx-js/runtime": "^1.6.22",
-		"@types/mdx-js__react": "^1.5.3",
-		"import-jsx": "^4.0.0"
+		"@types/mdx-js__react": "^1.5.3"
 	},
 	"devDependencies": {
 		"@ava/babel": "^1.0.1",
